# compiler

homework/frontend/: .clang-format  CMakeLists.txt  main.c
homework/frontend/lexer/: CMakeLists.txt
homework/frontend/lexer/include/: lexer.h  utils.h
homework/frontend/lexer/src/: lexer.c  utils.c
homework/frontend/lexer/test/: sample_1.txt  sample_2.txt  samples_extended.txt
homework/frontend/parser/: CMakeLists.txt
homework/frontend/parser/include/: parser.h
homework/frontend/parser/src/: parser.c
homework/frontend/semantic_analyzer/: CMakeLists.txt
homework/frontend/semantic_analyzer/include/: domain.h
homework/frontend/semantic_analyzer/src/: domain.c
homework/frontend/types_analyzer/: CMakeLists.txt
homework/frontend/types_analyzer/src/: types.c
homework/lab_1/: README.md
lab_1/: README.md
my_compiler/: CMakeLists.txt  README.md  main.c
my_compiler/frontend/: CMakeLists.txt
my_compiler/frontend/lexer/: CMakeLists.txt
my_compiler/frontend/lexer/include/: lexer.h  utils.h
my_compiler/frontend/lexer/src/: lexer.c  utils.c
my_compiler/frontend/parser/: CMakeLists.txt  README.md
my_compiler/frontend/parser/include/: parser.h
my_compiler/frontend/parser/src/: parser.c
my_compiler/frontend/test/: sample_1.txt  sample_2.txt  sample_bad.txt
my_compiler/frontend/utils/: CMakeLists.txt
my_compiler/frontend/utils/include/: utils.h
my_compiler/frontend/utils/src/: utils.c
